habilité la plaquita oculto a los estudiantes

--- a/public/campus/posgrados/base/styles/general.scss
+++ b/public/campus/posgrados/base/styles/general.scss
@@ -852,7 +852,7 @@ body.home:not(.editing) {
                                         }
                                         .course-section-header {
                                             .sectionbadges {
-                                                display: none !important;
+                                                //display: none !important;
                                             }
                                         }
                                         .content {
