--- a/public/campus/posgrados/base/styles/general.scss
+++ b/public/campus/posgrados/base/styles/general.scss
@@ -460,7 +460,7 @@ body.home:not(.editing) {
             }
             .sectionbadges {
                 span.badge.badge-pill {
-                    position: abosolute;
+                    position: absolute;
                     right: 1.5rem;
                     top: 1.5rem;
                 }
