oculté el buscador avanzado de las hojas de recurso con edicion desactivada

--- a/public/campus/posgrados/diplo-eel/4/styles/course.scss
+++ b/public/campus/posgrados/diplo-eel/4/styles/course.scss
@@ -2,7 +2,6 @@
 
 /* Hoja de recursos */
 
-
-/* .cmid-2975751 {
-    @include hoja-recursos;
-} */
+.cmid-2975751 {
+    @include general.hoja-recursos;
+}
