--- a/public/campus/posgrados/base/styles/general.scss
+++ b/public/campus/posgrados/base/styles/general.scss
@@ -38,6 +38,15 @@ $fs-xxxl: clamp(3.05rem, 3.54vi + 2.17rem, 5rem);
 }
 
 @mixin hoja-recursos {
+    #page-mod-data-view:not(.editing) {
+        div[role="main"] {
+            .datapreferences {
+                form#options {
+                    display: none;
+                }
+            }
+        }
+    }
     // Estilos para filtros
     #filtros {
         display: flex;
