--- a/public/campus/posgrados/ia/1/styles/course.scss
+++ b/public/campus/posgrados/ia/1/styles/course.scss
@@ -1,1 +1,13 @@
 @use '../../../base/styles/general';
+
+/* Hoja de recursos */
+
+.cmid-2975771:not(.editing) {
+    form#options {
+        display: none;
+    }
+}
+
+.cmid-2975771 {
+    @include general.hoja-recursos;
+}
