hojas de estilos individuales

--- a/public/campus/posgrados/diplo-eel/4/styles/course.scss
+++ b/public/campus/posgrados/diplo-eel/4/styles/course.scss
@@ -1,6 +1,28 @@
 @use '../../../base/styles/general';
 
-/* Hoja de recursos */
+/* HOJA DE RECURSOS */
+
+
+/* Oculto buscador avanzado - con edición desactivada */
+
+.cmid-2975751:not(.editing) {
+    div[role="main"] {
+        hr {
+            display: none;
+        }
+        .datapreferences {
+            hr {
+                display: none;
+            }
+            form#options {
+                display: none;
+            }
+        }
+    }
+}
+
+
+/* Le pongo los estilos con mixin */
 
 .cmid-2975751 {
     @include general.hoja-recursos;
