pildora girs en home

--- a/public/campus/posgrados/base/styles/general.scss
+++ b/public/campus/posgrados/base/styles/general.scss
@@ -542,8 +542,8 @@ body.home:not(.editing) {
     .text-info {
         color: $grey3 !important;
     }
-    .pildora-verde {
-        background-color: $secondary;
+    .pildora-gris {
+        background-color: $grey2;
         display: inline-block;
         padding: 0.5rem 1rem;
         border-radius: 500px;
