--- a/public/campus/posgrados/base/styles/general.scss
+++ b/public/campus/posgrados/base/styles/general.scss
@@ -355,6 +355,7 @@ body.home {
                             /* módulo destacado / actual */
                             li.section.current {
                                 background-color: $primary;
+                                color: white !important;
                                 &::before {
                                     display: none !important;
                                 }
