--- a/public/campus/posgrados/base/styles/general.scss
+++ b/public/campus/posgrados/base/styles/general.scss
@@ -523,7 +523,7 @@ body.home:not(.editing) {
             }
         }
     }
-    li.section.current {
+    /* li.section.current {
         .course-section-header {
             h3.sectionname {
                 a {
@@ -547,7 +547,7 @@ body.home:not(.editing) {
                 }
             }
         }
-    }
+    } */
 }
 
 
