--- a/public/campus/posgrados/base/styles/general.scss
+++ b/public/campus/posgrados/base/styles/general.scss
@@ -1025,6 +1025,20 @@ body.home:not(.editing) {
                 td {
                     border: 1px solid $grey2;
                     padding: 0.5rem;
+                    a {
+                        color: $primary !important;
+                        text-decoration-style: solid !important;
+                        text-decoration-color: $primary !important;
+                        text-decoration-thickness: 1.5px !important;
+                        text-underline-offset: 2px !important;
+                        &:hover {
+                            color: $grey3 !important;
+                            text-decoration-color: $grey3 !important;
+                        }
+                        &:focus {
+                            box-shadow: none;
+                        }
+                    }
                 }
             }
         }
