--- a/public/campus/posgrados/base/styles/general.scss
+++ b/public/campus/posgrados/base/styles/general.scss
@@ -688,7 +688,7 @@ body.home:not(.editing) {
         margin-bottom: 0;
         a {
             color: $primary;
-            text-decoration: none;
+            text-decoration: none !important;
             font-weight: 400 !important;
             &:hover {
                 color: $grey3 !important;
@@ -1026,11 +1026,13 @@ body.home:not(.editing) {
                     border: 1px solid $grey2;
                     padding: 0.5rem;
                     a {
+                        font-family: 'Roboto' !important;
+                        font-weight: bold;
                         color: $primary !important;
                         text-decoration-style: solid !important;
                         text-decoration-color: $primary !important;
-                        text-decoration-thickness: 1.5px !important;
-                        text-underline-offset: 2px !important;
+                        text-decoration-thickness: .1em !important;
+                        text-underline-offset: .15em !important;
                         &:hover {
                             color: $grey3 !important;
                             text-decoration-color: $grey3 !important;
