agregue el boton calendario al hero

--- a/public/campus/posgrados/base/styles/general.scss
+++ b/public/campus/posgrados/base/styles/general.scss
@@ -1238,6 +1238,9 @@ body:not(.home) {
                                             .btn-wp:after {
                                                 background-image: url(../../../base/img/wp-icon.svg);
                                             }
+                                            .btn-fechas:after {
+                                                background-image: url(../../../base/img/calendar-icon.svg);
+                                            }
                                         }
                                         .pent-sesion {
                                             padding-left: 70px;
