--- a/public/campus/posgrados/base/styles/general.scss
+++ b/public/campus/posgrados/base/styles/general.scss
@@ -555,7 +555,7 @@ body.home:not(.editing) {
         background-color: $grey1;
         display: inline-block;
         padding: 0.5rem 1rem;
-        border-radius: 500px;
+        //border-radius: 500px;
     }
     .act-importante {
         background-color: $accent;
