--- a/public/campus/posgrados/base/styles/general.scss
+++ b/public/campus/posgrados/base/styles/general.scss
@@ -1203,7 +1203,7 @@ body.home:not(.editing) {
                     padding: 0.5rem;
                     a {
                         font-family: 'Roboto' !important;
-                        font-weight: bold;
+                        font-weight: 500 !important;
                         color: $primary !important;
                         text-decoration-style: solid !important;
                         text-decoration-color: $primary !important;
